Replace application plugin